--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
-
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.33-beta'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
