--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ captures/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
+*.jks
 #*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
@@ -50,7 +50,7 @@ captures/
 .cxx/
 
 # Google Services (e.g. APIs or Firebase)
-# google-services.json
+google-services.json
 
 # Freeline
 freeline.py
